# transplant

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: binary_io.hpp  command_line_parser.hpp  constants.hpp  deserializer.hpp  path_manager.hpp  serializer.hpp  test_adapter.hpp
src/: binary_io.cpp  command_line_parser.cpp  deserializer.cpp  main.cpp  path_manager.cpp  serializer.cpp  test_adapter.cpp
tests/: test_common.cpp  test_common.hpp  transplant_tests.cpp
